<fix> product list description alignment

--- a/src/scss/mrs-lists/_mrs-lists.scss
+++ b/src/scss/mrs-lists/_mrs-lists.scss
@@ -47,6 +47,7 @@
 		line-height:normal;
 		white-space:normal;
 		padding-right:30px;
+		text-align:left;
 	}
 }
 
@@ -80,6 +81,7 @@
 		}
 	}
 	.item-avatar{
+		text-align:left;
 		label{			
 			z-index:99;
 			padding: 45px 7px;
@@ -122,6 +124,7 @@
 		border:none;		
 		position:relative;	
 		border-bottom: solid 1px rgba(255,255,255, 0.2);
+		text-align:left;
 		&.right-icon{
 			padding-right:40px;
 			label{
@@ -212,6 +215,7 @@
 		font-weight: $font-regular;
 		line-height: $font-size-base;
 		white-space: normal;
+		text-align:left;
 		>div{
 			max-height: 29px;
   			overflow: hidden;
@@ -302,6 +306,7 @@
 		font-size: $font-size-base;
 		background: rgba(255,255,255,0.6);
 		border:none;
+		text-align:left;
 		&:first-child{
 			margin-top: 15px;
 		}
